ui/themes/default/css/app.css
/* ... */
#header {
    height: 50px;
    background: #424951;
    min-width: 1300px;
}

#header #logo {
    float: left;
    margin: 0px 10px;
    color: #ffffff;
    font-weight: bold;
    font-size: 35px;
    text-transform: uppercase;
    cursor:pointer;
}

#header #logo img {
    width: 35px;
    position: relative;
    top: -4px;
    margin-right: 5px;
    display: inline;
}

#header #pillars{
    float:left;
    margin:0 0 0 60px;
    height:35px;
    position:relative;
    z-index:10000000;
}

#header #pillars .one-pillar{
    float:left;
    margin-right:5px;
}

#header #pillars .one-pillar button{
    background-color: #515e67;
    color:white;
    font-weight:bold;
    display:inline-block;
    border: none;
    border-right:solid 1px #4f5762;
    height:50px;
    float:left;
    padding-left:10px;
    padding-right:10px;
    font-size:16px;
}

#header #pillars .one-pillar button:hover{
    background-color:#222222;
}
#header #pillars .one-pillar button.selected{
    background-color:white;
    color:#337ab7;
}

#header #slogan {
    font-style: italic;
    color: #337ab7;
    font-size: 10px;
}

#header #userMenu {
    float: right;
    margin: 15px 20px 0 0;
    height: 20px;
    min-width: 15%;
    font-weight: bold;
    position: relative;
    z-index: 10;
}

#header #userMenu ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

#header #userMenu ul li {
    float: left;
    margin-right: 10px;
    color: #bfc0c1;
    position:relative;
}

#header #userMenu ul li a {
    color: #E5EAEE;
    outline: 0;
}

#header #userMenu ul li a:hover {
    color: white;
    text-decoration: none;
}

#header #userMenu li .myMenu{
    font-size: 22px;
    left: 22px;
    position: relative;
    cursor:pointer;
}

#header #userMenu li .userMenu{
    display:none;
    cursor:pointer;
    position:absolute;
    background:#424951;
    right: -25px;
    top: 20px;
    padding-top:15px;
    font-size: 14px;
}
#header #userMenu li:hover{ color:white; }
#header #userMenu li:hover > .userMenu{
    display:block;
}

#header #userMenu li .userMenu li{
    float: none;
    margin: 0;
    padding:0;
    border:solid 1px white;
    border-top:none;
    border-bottom:none;
}

#header #userMenu li .userMenu li.logout{ border-bottom: solid 1px white; }

#header #userMenu li .userMenu li a{
    padding: 10px 25px 5px 10px;
    white-space: nowrap;
    border-top: 1px solid #606d76;
    border-bottom: 1px solid #4f5762;
}

#header #userMenu li .userMenu li a.userMenu0{
    border-top:none;
}

#header #userMenu li .userMenu li a:hover{
    background-color:black;
}

#page {
    width: 100%;
    min-width: 1300px;
    display: table;
    clear: both;
}

#mainMenu {
    background-color: #515E67;
    float: left;
    min-height: 525px;
    position: relative;
    border-bottom: solid 1px white;
    border-right: solid 1px white;
}

#mainMenu.mainMenu{
    width: 12%;
}

#mainMenu.mainMenu2{
    width: 45px;
}

#mainMenu .environmentsMenu{
    margin:5px;
}

#mainMenu .environmentsMenu input{
    margin: 0 1px;
}

#mainMenu h4 {
    margin: 0;
    background-color: #70808D;
    padding: 5px 10px;
    border-top: 1px solid #989eaa;
    border-bottom: solid 1px #4F5762;
}

#mainMenu ul {
    border-top: solid 1px #606d76;
    margin: 0;
    padding: 0;
    list-style-type: none;
}

#mainMenu li {
    padding: 10px 0 10px 10px;
    border-top: solid 1px #606d76;
    border-bottom: solid 1px #4F5762;
    cursor: pointer;
    height: 41px;
}

#mainMenu li.first{
    margin-top:4px
}

#mainMenu ul li a {
    display: block;
    color: white;
    font-weight: bold;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
    text-decoration: none;
    outline: 0;
}

#mainMenu li:first-child {
    border-top: none;
}

#mainMenu ul li:hover {
    background-color: #222222;
    color: white;
}

#mainMenu ul li.active {
    background-color: white;
}

#mainMenu ul li.active > a {
    color: #337ab7;
    text-shadow: none;
}

#mainMenu .collapser{
    font-size: 20px;
    color:white;
    position:absolute;
    bottom: 4px;
    right: 2px;
}

#page .wrapper {
    width: 100%;
    float: left;
    min-height: 560px;
    background-color: #e5eaee;
    border-top: solid 1px white;
    padding: 20px;
    position: relative;
}

#page .wrapper2 {
    width: 88%;
    float: left;
    min-height: 560px;
    background-color: #e5eaee;
    border-top: solid 1px white;
    padding: 20px;
    position: relative;
}

#page .wrapper3 {
    width: 97%;
    float: left;
    min-height: 560px;
    background-color: #e5eaee;
    border-top: solid 1px white;
    padding: 20px;
    position: relative;
}

#page .wrapper .inner-line {
    border-left: 1px solid white;
    height: 35px;
    left: -1px;
    position: absolute;
    top: -1px;
}

#tracker {
    background: white;
    padding: 3px 10px;
    border: solid 1px #cccccc;
    height: 30px;
    border-radius: 5px;
    margin-bottom: 10px;
}

#tracker ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

#tracker ul li {
    float: left;
    padding-left: 5px;
}

#tracker ul li b{
    color: #515e67;
}

#notifications {
    clear: both;
    background: white;
    padding: 5px;
    border: solid 1px #cccccc;
    margin-bottom: 10px;
    border-radius: 5px;
}

.alert {
    margin: 0px;
}

#page section {
    display: inline-block;
    width: 100%;
    background: #ffffff;
    border: solid 1px #cccccc;
    padding: 10px;
    border-radius: 5px;
    min-height: 300px;
}

#page section aside {
    float: left;
    min-height: 450px;
    display: inline-block;
}

#footer {
    border-top: solid 1px white;
    width: 100%;
    min-height: 40px;
    background: #404449;
    color: #e5eaee;
    min-width: 1300px;
}

#footer .separator {
    border-top: solid 1px #4F5762;
}

#footer .menu {
    font-size: 11px;
    margin-top: 10px;
    list-style-type: none;
    float: left;
}

#footer .menu li {
    float: left;
    padding: 0 5px;
}
/* ... */

